Fix desktop below names metadata visibility

--- a/common/common.scss
+++ b/common/common.scss
@@ -117,6 +117,10 @@
       @include topic-author-badge-base($label);
       order: 2;
       flex: 0 1 auto;
+      clear: none;
+      visibility: visible;
+      height: auto;
+      font-size: var(--font-down-1);
       width: fit-content;
       margin-top: 0.15em;
       margin-left: 0;
